--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>2.5.7</version>
+    <version>2.5.8</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/lunasaw/luna-common</url>
 
@@ -21,14 +21,14 @@
         <!--dependencies-->
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
-        <commons-codec.version>1.16.0</commons-codec.version>
-        <commons-io.version>2.15.1</commons-io.version>
-        <httpclient-5.version>5.2.1</httpclient-5.version>
+        <commons-codec.version>1.16.1</commons-codec.version>
+        <commons-io.version>2.16.1</commons-io.version>
+        <httpclient-5.version>5.3.1</httpclient-5.version>
         <guava.version>32.1.3-jre</guava.version>
-        <fast-json.version>2.0.26</fast-json.version>
+        <fast-json.version>2.0.48</fast-json.version>
         <oshi.version>6.4.9</oshi.version>
         <junit.version>4.13.2</junit.version>
-        <lombok.version>1.18.30</lombok.version>
+        <lombok.version>1.18.32</lombok.version>
         <validation-api.version>3.0.2</validation-api.version>
         <slf4j-simple.version>2.0.9</slf4j-simple.version>
     </properties>
@@ -103,7 +103,7 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <artifactId>fastjson2</artifactId>
             <version>${fast-json.version}</version>
         </dependency>
         <dependency>
