--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>2.6.0</version>
+    <version>2.6.1</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/lunasaw/luna-common</url>
 
@@ -23,7 +23,7 @@
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-codec.version>1.16.1</commons-codec.version>
         <commons-io.version>2.16.1</commons-io.version>
-        <httpclient-5.version>5.3.1</httpclient-5.version>
+        <httpclient-5.version>5.4-alpha2</httpclient-5.version>
         <guava.version>32.1.3-jre</guava.version>
         <fast-json2.version>2.0.48</fast-json2.version>
         <oshi.version>6.4.9</oshi.version>
